--- a/yamls/3DOFFLIPPER.dmd.yaml
+++ b/yamls/3DOFFLIPPER.dmd.yaml
@@ -1,36 +1,45 @@
 directives:
-  - add_model:
-      name: box
-      file: package://iris_environments/box_small.urdf
-  - add_model:
-      name: oneDOF_iiwa7_with_box_collision
-      file: package://iris_environments/oneDOF_iiwa7_with_box_collision.urdf
-  - add_model:
-      name: twoDOF_iiwa7_with_box_collision
-      file: package://iris_environments/twoDOF_iiwa7_with_box_collision.urdf
 
-  - add_frame:
-      name: oneDOF_iiwa7_with_box_collision::oneDOF_iiwa7_with_box_collision_offset
-      X_PF:
-        base_frame: world
-        translation: [0, -0.55, 0]
-        rotation: !Rpy { deg: [0, 0, -90] }
-  - add_frame:
-      name: twoDOF_iiwa7_with_box_collision::twoDOF_iiwa7_with_box_collision_offset
-      X_PF:
-        base_frame: world
-        translation: [0, 0.55, 0]
-        rotation: !Rpy { deg: [0, 0, -90] }
+# Add Box
+- add_model:
+    name: box
+    file: package://iris_environments/box_small.urdf
 
-  - add_weld:
-      parent: world
-      child: box::base
-  - add_weld:
-      parent: oneDOF_iiwa7_with_box_collision::oneDOF_iiwa7_with_box_collision_offset
-      child: oneDOF_iiwa7_with_box_collision::iiwa_oneDOF_link_0
-  - add_weld:
-      parent: twoDOF_iiwa7_with_box_collision::twoDOF_iiwa7_with_box_collision_offset
-      child: twoDOF_iiwa7_with_box_collision::iiwa_twoDOF_link_0
+- add_weld:
+    parent: world
+    child: box::base
+
+# Add 1 DOF IIWA
+- add_model:
+    name: oneDOF_iiwa7_with_box_collision
+    file: package://iris_environments/oneDOF_iiwa7_with_box_collision.urdf
+
+- add_frame:
+    name: oneDOF_iiwa7_with_box_collision::oneDOF_iiwa7_with_box_collision_offset
+    X_PF:
+    base_frame: world
+    translation: [0, -0.55, 0]
+    rotation: !Rpy { deg: [0, 0, -90] }
+
+- add_weld:
+    parent: oneDOF_iiwa7_with_box_collision::oneDOF_iiwa7_with_box_collision_offset
+    child: oneDOF_iiwa7_with_box_collision::iiwa_oneDOF_link_0
+
+# Add 2 DOF IIWA
+- add_model:
+    name: twoDOF_iiwa7_with_box_collision
+    file: package://iris_environments/twoDOF_iiwa7_with_box_collision.urdf
+
+- add_frame:
+    name: twoDOF_iiwa7_with_box_collision::twoDOF_iiwa7_with_box_collision_offset
+    X_PF:
+    base_frame: world
+    translation: [0, 0.55, 0]
+    rotation: !Rpy { deg: [0, 0, -90] }
+
+- add_weld:
+    parent: twoDOF_iiwa7_with_box_collision::twoDOF_iiwa7_with_box_collision_offset
+    child: twoDOF_iiwa7_with_box_collision::iiwa_twoDOF_link_0
 
 
 
