--- a/yamls/7DOFIIWA.dmd.yaml
+++ b/yamls/7DOFIIWA.dmd.yaml
@@ -4,6 +4,14 @@ directives:
 - add_model:
     name: iiwa
     file: package://iris_environments/iiwa7_with_box_collision.urdf
+    default_joint_positions:
+        iiwa_joint_1: [ 1.57 ]
+        iiwa_joint_2: [ 0.48 ]
+        iiwa_joint_3: [ 0.0 ]
+        iiwa_joint_4: [ -1.2 ]
+        iiwa_joint_5: [ 1.57 ]
+        iiwa_joint_6: [ -1.57 ]
+        iiwa_joint_7: [ 0.0 ]
 
 - add_weld:
     parent: world
@@ -17,9 +25,9 @@ directives:
 - add_frame:
     name: iiwa::wsg_attach
     X_PF:
-      base_frame: iiwa::iiwa_link_7
-      translation: [0, 0, 0.114]
-      rotation: !Rpy { deg: [90.0, 0.0, 0.0 ]}
+        base_frame: iiwa::iiwa_link_7
+        translation: [0, 0, 0.114]
+        rotation: !Rpy { deg: [90.0, 0.0, 0.0 ]}
 
 - add_weld:
     parent: iiwa::wsg_attach
@@ -33,8 +41,8 @@ directives:
 - add_frame:
     name: shelf1_origin
     X_PF:
-      base_frame: world
-      translation: [-0.5, 0.45, 0.0]
+        base_frame: world
+        translation: [-0.5, 0.45, 0.0]
 
 - add_weld:
     parent: shelf1_origin
@@ -48,8 +56,8 @@ directives:
 - add_frame:
     name: shelf2_origin
     X_PF:
-      base_frame: world
-      translation: [-0.5, -0.45, 0.0]
+        base_frame: world
+        translation: [-0.5, -0.45, 0.0]
 
 - add_weld:
     parent: shelf2_origin
@@ -63,9 +71,9 @@ directives:
 - add_frame:
     name: ground::ground_offset
     X_PF:
-      base_frame: world
-      translation: [0, 0, -0.05]
-      rotation: !Rpy { deg: [0, 0, 0] }
+        base_frame: world
+        translation: [0, 0, -0.05]
+        rotation: !Rpy { deg: [0, 0, 0] }
 
 - add_weld:
     parent: ground::ground_offset
